kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
    name: travia
spec:
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
    type: LoadBalancer
    selector:
        app: travia
