kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: travia
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: travia
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: travia
              servicePort: 80
